syntax = "proto3";

package io.jiache.grpc;

option java_multiple_files = true;
option java_package = "io.jiache.grpc";

message Entry {
    uint64 index = 2;
    bytes key = 3;
    bytes value = 4;
}

// --------- Leader -------------
service LeaderServer {
    rpc put (LeaderPutRequest) returns (LeaderPutResponse) {}
    rpc get (LeaderGetRequest) returns (LeaderGetResponse) {}
    rpc getLastCommit (LeaderGetLastCommitRequest) returns (LeaderGetLastCommitResponse) {}
}

message LeaderPutRequest {
    bytes key = 1;
    bytes value = 2;
}

message LeaderPutResponse {
    bool success = 1;
}

message LeaderGetRequest {
    bytes key = 1;
}

message LeaderGetResponse {
    bool success = 1;
    bytes value = 2;
}

message LeaderGetLastCommitRequest {
}

message LeaderGetLastCommitResponse {
    bool success = 1;
    uint64 lastCommit = 2;
}


// --------- Secretary -------------
service SecretaryServer {
    rpc appendEntries (SecretaryAppendEntriesRequest) returns (SecretaryAppendEntriesResponse) {}
}

message SecretaryAppendEntriesRequest {
    repeated Entry entries = 1;
}

message SecretaryAppendEntriesResponse {
    uint64 ackIndex = 1;
    uint64 winSize = 2;
}

// --------- Follower -------------
service FollowerServer {
    rpc put (FollowerPutRequest) returns (FollowerPutResponse) {}
    rpc get (FollowerGetRequest) returns (FollowerGetResponse) {}
    rpc appendEntriesFromLeader (FollowerAppendEntriesFromLeaderRequest) returns (FollowerAppendEntriesFromLeaderResponse) {}
    rpc appendEntriesFromSecretary (FollowerAppendEntriesFromSecretaryRequest) returns (FollowerAppendEntriesFromSecretaryResponse) {}
}

message FollowerPutRequest {
    bytes key = 1;
    bytes value = 2;
}

message FollowerPutResponse {
    bool success = 1;
}

message FollowerGetRequest {
    bytes key = 1;
}

message FollowerGetResponse {
    bool success = 1;
    bytes value = 2;
}

message FollowerAppendEntriesFromLeaderRequest {
    repeated Entry entry = 1;
    uint64 lastCommitted = 2;
}

message FollowerAppendEntriesFromLeaderResponse {
    bool success = 1;
    uint64 lastIndex = 2;
}

message FollowerAppendEntriesFromSecretaryRequest {
    repeated Entry entry = 1;
}

message FollowerAppendEntriesFromSecretaryResponse {
    bool success = 1;
    uint64 lastIndex = 2;
}
